// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

//import "google/protobuf/empty.proto";

package net_exchange;

// The service definition.
service ExProto {
  rpc MessageRtu (stream RtuMessage) returns (stream RtuMessage);
  rpc MessageExt (stream ExtMessage) returns (stream ExtMessage);
  rpc MessageCmd (stream CmdMessage) returns (stream CmdMessage);
}

// Remote Terminal Unit streaming for Modbus Master
message RtuMessage {
  uint32 channel = 1;
  uint32 sequence_number = 2;
  uint32 gw_id = 3;
  uint64 device_id = 4;
  bytes data_unit = 5; // Transmission Data Unit
}

// RTU exchanging streaming for Modbus Slave
message ExtMessage {
  uint64 context = 1;
  uint32 gw_id = 2;
  uint64 device_id = 3;
  bytes data_unit = 4; // Transmission Data Unit
}

// Command message streaming with OP codes
message CmdMessage {
  uint32 op_code = 1;
  uint32 route = 2;
  uint32 argument = 3;
  uint32 gw_id = 4;
  uint64 device_id = 5;
  bytes payload = 6; // Message payload
}
